--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "author": "Roy Ben-Sasson",
   "license": "MIT",
   "peerDependencies": {
-    "react-native": "0.51.0"
+    "react-native": "^0.63.4"
   }
 }
